<resources>
    <string name="app_name">BikeTrack</string>
    <string name="title_history">History</string>
    <string name="title_camera">Camera</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="play_float">Play</string>
    <string name="stop_float">Stop</string>
    <string name="save_float">Save</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="speed">Speed:</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="biketrack">BikeTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_detail">Track Details</string>
    <string name="qr_title">QRCode</string>
    <string name="scanQR">Scan the QR Code</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
</resources>